--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
