--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "babel-plugin-macros": "^3.1.0",
     "formik": "^2.2.9",
     "json-server": "^0.17.3",
@@ -21,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
+    "redux-toolkit": "^1.1.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
