--- a/Backend/infoNeo/package.json
+++ b/Backend/infoNeo/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "infoneo",
+  "name": "backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon  ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express": "^4.18.2",
+    "mongoose": "^7.1.1",
+    "morgan": "~1.9.1",
+    "normalize-mongoose": "^1.0.0"
   }
 }
