--- a/Backend/infoNeo/package.json
+++ b/Backend/infoNeo/package.json
@@ -10,8 +10,12 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
-    "normalize-mongoose": "^1.0.0"
+    "normalize-mongoose": "^1.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
