--- a/Backend/infoNeo/package.json
+++ b/Backend/infoNeo/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "file-system": "^2.2.2",
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "normalize-mongoose": "^1.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
